@@ -4,6 +4,8 @@ Version 1.9.8
 - CHG: New line margin icons and minor high dpi refinements
        in TortoiseMerge. (Ivan Zhakov)
 - BUG: Right click in touch mode wasn't working. (Stefan)
+- BUG: TortoiseUDiff shows invalid window title for patch
+       files opened from shell. (Ivan Zhakov)
 
 Version 1.9.7
 - BUG: Drag copy-and-add did not add auto-properties. (Stefan)
